--- a/MovieProject/Base.lproj/Main.storyboard
+++ b/MovieProject/Base.lproj/Main.storyboard
@@ -174,6 +174,14 @@
                                                     <constraint firstAttribute="height" constant="50" id="cru-vc-XI3"/>
                                                 </constraints>
                                             </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bookmark.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="AJu-k0-Loh">
+                                                <rect key="frame" x="15" y="25" width="50" height="50"/>
+                                                <color key="tintColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="BNv-IU-7gk"/>
+                                                    <constraint firstAttribute="width" constant="50" id="hDn-iN-Jl1"/>
+                                                </constraints>
+                                            </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K9X-7R-6Ta">
                                                 <rect key="frame" x="0.0" y="269" width="414" height="268.5"/>
                                                 <subviews>
@@ -344,7 +352,7 @@
                                                                         <rect key="frame" x="360" y="0.0" width="24" height="50"/>
                                                                         <subviews>
                                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homekit" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="WKc-VH-xO1">
-                                                                                <rect key="frame" x="0.0" y="2" width="24" height="46"/>
+                                                                                <rect key="frame" x="0.0" y="-1" width="24" height="50"/>
                                                                             </imageView>
                                                                         </subviews>
                                                                     </stackView>
@@ -421,9 +429,11 @@
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstItem="AJu-k0-Loh" firstAttribute="top" secondItem="Lgb-Ga-B4i" secondAttribute="top" constant="25" id="0Gw-sS-YpF"/>
                                             <constraint firstItem="K9X-7R-6Ta" firstAttribute="leading" secondItem="Lgb-Ga-B4i" secondAttribute="leading" id="129-Mn-YRz"/>
                                             <constraint firstItem="K9X-7R-6Ta" firstAttribute="height" secondItem="Lgb-Ga-B4i" secondAttribute="height" multiplier="0.2" id="3gZ-W8-zHi"/>
                                             <constraint firstItem="Xf0-ia-bcq" firstAttribute="trailing" secondItem="1Ap-Py-ugh" secondAttribute="trailing" constant="-15" id="4Zk-q7-X03"/>
+                                            <constraint firstItem="AJu-k0-Loh" firstAttribute="leading" secondItem="Lgb-Ga-B4i" secondAttribute="leading" constant="15" id="6w8-CX-0et"/>
                                             <constraint firstItem="1Ap-Py-ugh" firstAttribute="leading" secondItem="Lgb-Ga-B4i" secondAttribute="leading" id="CAx-gC-HsA"/>
                                             <constraint firstItem="K9X-7R-6Ta" firstAttribute="trailing" secondItem="Lgb-Ga-B4i" secondAttribute="trailing" id="HRr-Ch-Wio"/>
                                             <constraint firstItem="S7x-cV-qnq" firstAttribute="height" secondItem="Lgb-Ga-B4i" secondAttribute="height" multiplier="0.6" id="HiH-ZC-XG6"/>
@@ -460,6 +470,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="addListButton" destination="AJu-k0-Loh" id="uga-XO-hJD"/>
                         <outlet property="bottomStackView" destination="KeZ-a6-7YF" id="4j4-Hl-Zne"/>
                         <outlet property="budgetLabel" destination="rnP-ma-ehy" id="KRQ-5l-KqA"/>
                         <outlet property="castCollectionView" destination="obW-sj-hRw" id="JCQ-EY-cfl"/>
@@ -699,6 +710,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bookmark.fill" catalog="system" width="110" height="128"/>
         <image name="calendar" catalog="system" width="128" height="107"/>
         <image name="dollarsign" catalog="system" width="89" height="128"/>
         <image name="dollarsign.arrow.circlepath" catalog="system" width="128" height="112"/>
